// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`column watch default index 1`] = `
<div class="van-picker-column" style="height: 0px;">
  <ul style="transition: 0ms; transform: translate3d(0, -75px, 0); line-height: 50px;">
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--disabled" style="height: 50px;">1</li>
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 50px;">1990</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1991</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1992</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1993</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1994</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1995</li>
  </ul>
</div>
`;

exports[`column watch default index 2`] = `
<div class="van-picker-column" style="height: 0px;">
  <ul style="transition: 0ms; transform: translate3d(0, -125px, 0); line-height: 50px;">
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--disabled" style="height: 50px;">1</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1990</li>
    <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected" style="height: 50px;">1991</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1992</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1993</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1994</li>
    <li class="van-ellipsis van-picker-column__item" style="height: 50px;">1995</li>
  </ul>
</div>
`;

exports[`render title slot 1`] = `
<div class="van-picker">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>Custom title<div class="van-picker__confirm">确认</div>
  </div>
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;
